# World-Cup-2026-prediction

./: .gitignore  .hfignore  LICENSE  Makefile  README.md  ROADMAP.md  app.py  pyproject.toml  requirements.txt
data/: README.md
docs/: dataset-coverage-matrix.md  demo-script.md  field-notes.md  hackathon-entry.md  implementation-plan.md  market-data-source-review.md  research.md  social-post.md  submission-checklist.md  test-set-review.csv  world-cup-verification-checklist.md
models/: README.md  backtest_report.json  elo_fit_report.json  host_adjustment_evaluation.json  opener_draw_evaluation.json  recalibration_evaluation.json  upgrade_evaluation.json  vector_calibration_evaluation.json
predictions/: INTEGRITY_NOTES.md  README.md
release/: submission.json
results/: base_q8.json  bracket_verification.json  qlora_gate_report.json  ship_decision.json  submission_preflight.json  tuned_q8.json
scripts/: audit_dataset.py  backtest_common.py  backtest_walk_forward.py  benchmark_gguf.py  build_historical_dataset.py  build_knockout_snapshot.py  close_qlora_gate.py  evaluate_extractor.py  export_gguf.sh  fetch_wc2026_results.py  fit_elo_dixon_coles.py  generate_forecast.py  generate_gap_fill.py  generate_live_forecast.py  generate_synthetic_data.py  generate_upcoming_forecasts.py  health_check.py  host_adjustment_evaluation.py  market_blend_evaluation.py  opener_draw_evaluation.py  prepare_matches.py  recalibration_evaluation.py  review_dataset.py  smoke_test_space.py  submission_preflight.py  tournament_experiment_common.py  track_record_summary.py  update_snapshot.py  (+4 more)
(+308 files in other folders)
