[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "underdog-lab"
version = "0.1.0"
description = "A local-first football counterfactual forecasting game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gradio>=5.0,<7",
  "huggingface-hub>=0.30,<2",
  "llama-cpp-python>=0.3.9,<0.4",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]
training = [
  "datasets>=3",
  "huggingface-hub>=0.30",
  "modal>=0.73",
  "peft>=0.14",
  "transformers>=4.51",
  "trl>=0.16",
]
modeling = [
  "numpy>=2,<3",
  "scipy>=1.14,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
